<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/fldListviewAccountsCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:width="0dp"
        android:height="0dp"
        android:text="@string/label_listview_accounts_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblListViewAccountsAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="0dp"
            android:text="@string/label_listview_accounts_account"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/fldListViewAccountsAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            app:autoSizeTextType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblListViewAccountsDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="0dp"
            android:text="@string/label_due_date"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/fldListViewAccountsDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            app:autoSizeTextType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblListViewAccountsDueValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="0dp"
            android:text="@string/label_due_value"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/fldListViewAccountsDueValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            app:autoSizeTextType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblListViewAccountsPaymentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="0dp"
            android:text="@string/label_payment_date"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/fldListViewAccountsPaymentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            app:autoSizeTextType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblListViewAccountsPaymentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="0dp"
            android:text="@string/label_payment_value"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/fldListViewAccountsPaymentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            app:autoSizeTextType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblListViewAccountsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:width="0dp"
            android:text="@string/label_description"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/fldListViewAccountsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            app:autoSizeTextType="none" />

    </LinearLayout>


</LinearLayout>